fixed burger menu jumping into the next line

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -533,10 +533,14 @@ input[type=submit] {
 }
 
 @media (max-width:629px) {
+	.navigation{
+		display:block;
+	}
+		
 	.smallmenu{
 		display: flex;
-		flex-direction: column;
 		align-items: flex-end;
+		flex-direction: column;
 		overflow:hidden;
 		height:40px;
 		margin-left:auto;
@@ -558,6 +562,10 @@ input[type=submit] {
 	}
 
 	#hovermenu{
+		background:white;
+		padding:5px;
+		border-radius: 5px;
+		
 	}
 
 	.smallmenu span{
@@ -584,8 +592,17 @@ input[type=submit] {
 		overflow:visible;
 		z-index:100;
 	}
-
+	
 	.bigmenu{
 		display:none;
+	}
+	
+	@media (max-width:540px) {
+		.logo{
+			width:50%;
+		}
+		.navigation{
+			height:70px;
+		}
 	}
 }
